--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "acorn": "^6.1.1",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1"
   }
 }
