--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "gsap": "^2.1.3",
+    "imports-loader": "^0.8.0",
     "node-sass": "^4.12.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "scrollmagic": "^2.0.7"
   }
 }
